--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "ejs": "^3.1.9",
-    "nedb": "^1.8.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^17.2.2",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^8.18.2",
+    "multer": "^1.4.5-lts.1",
+    "nedb": "^1.8.0",
+    "nodemon": "^3.1.10",
+    "underscore": "^1.13.7"
   }
 }
